# ros2_opengl_project

./: README.md
build_scripts/: _build_project.sh
launch_scripts/: _launch_project.sh
src/launcher_node/: CMakeLists.txt  package.xml
src/launcher_node/launch/: launcher_node.launch.py
src/opengl_node/: CMakeLists.txt  package.xml
src/opengl_node/include/opengl_node/: opengl_node.h
src/opengl_node/launch/: opengl_node.py
src/opengl_node/src/: opengl_node.cpp
